Rollen worden gechecked in middleware fixes van stijn commentaar en HR kan users beheren en aanpassen
