# BackendGeoprofs/app/Http/Controllers/UserController.php
@@ -4,6 +4,8 @@ namespace App\Http\Controllers;
 
 use App\Models\User;
 use Illuminate\Http\Request;
+use Illuminate\Support\Facades\Hash;
+
 class UserController extends Controller
 {
     /**
@@ -54,12 +56,59 @@ class UserController extends Controller
 
 
     /**
-     * Update the specified resource in storage.
+     * @OA\Put(
+     *     path="/user/{user}",
+     *     summary="Update User",
+     *     security={{"BearerAuth": {}}},
+     *     tags={"User"},
+     *     @OA\Parameter(
+     *         name="user",
+     *         in="path",
+     *         required=true,
+     *         @OA\Schema(type="integer", example=1)
+     *     ),
+     *     @OA\RequestBody(
+     *         required=true,
+     *         @OA\JsonContent(
+     *             @OA\Property(property="name", type="string", example="John"),
+     *             @OA\Property(property="surname", type="string", example="Doe"),
+     *             @OA\Property(property="verlofsaldo", type="number", format="float", example=44),
+     *             @OA\Property(property="password", type="string", example="password123"),
+     *             @OA\Property(
+     *                 property="role",
+     *                 type="string",
+     *                 enum={"worker", "HR", "Manager"},
+     *                 example="HR"
+     *             ),
+     *             @OA\Property(property="afdeling", type="string", example="Drone & Imaging")
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="Succesvol geüpdatet"
+     *     ),
+     *     @OA\Response(
+     *         response=403,
+     *         description="Forbidden"
+     *     )
+     * )
      */
+
     public function update(Request $request, User $user)
     {
-        //
+
+        $validated = $request->validate([
+            'name' => 'string|max:255',
+            'surname' => 'string|max:255',
+            'password' => 'string|min:8',
+            'verlofsaldo' => 'numeric',
+        ]);
+
+        $user->update($validated);
+
+        return response()->json($user);
     }
+
 
     /**
      * Remove the specified resource from storage.
