# BackendGeoprofs/app/Models/User.php
@@ -21,8 +21,9 @@ class User extends Authenticatable
     protected $fillable = [
         'name',
         'surname',
-        'password',
-        'verlofsaldo'
+        'verlofsaldo',
+        'role',
+        'afdeling'
     ];
 
     /**
@@ -52,20 +53,16 @@ class User extends Authenticatable
         return $this->hasMany(VerlofAanvraag::class);
     }
 
-    public function HR(){
-        return $this->where('role', 'HR');
+    public function isHR(){
+        return $this->role === 'HR';
     }
 
-    public function manager(){
-        return $this->where('role', 'Manager');
+    public function isManager(){
+        return $this->role === 'manager';
     }
 
-    public function worker()
+    public function isWorker(): bool
     {
-        return $this->where('role', 'worker');
-    }
-    public function admin()
-    {
-        return $this->where('role', 'admin');
+        return $this->role === 'worker';
     }
 }
