# BackendGeoprofs/storage/api-docs/api-docs.json
@@ -51,7 +51,7 @@
                                 "properties": {
                                     "name": {
                                         "type": "string",
-                                        "example": "Dr. Emmett Flatley"
+                                        "example": "Brycen Veum"
                                     },
                                     "password": {
                                         "type": "string",
@@ -151,6 +151,79 @@
                         "BearerAuth": []
                     }
                 ]
+            },
+            "put": {
+                "tags": [
+                    "User"
+                ],
+                "summary": "Update User",
+                "operationId": "6bad92b32b8ea09447c40062e7bffd7a",
+                "parameters": [
+                    {
+                        "name": "user",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "example": 1
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "name": {
+                                        "type": "string",
+                                        "example": "John"
+                                    },
+                                    "surname": {
+                                        "type": "string",
+                                        "example": "Doe"
+                                    },
+                                    "verlofsaldo": {
+                                        "type": "number",
+                                        "format": "float",
+                                        "example": 44
+                                    },
+                                    "password": {
+                                        "type": "string",
+                                        "example": "password123"
+                                    },
+                                    "role": {
+                                        "type": "string",
+                                        "enum": [
+                                            "worker",
+                                            "HR",
+                                            "Manager"
+                                        ],
+                                        "example": "HR"
+                                    },
+                                    "afdeling": {
+                                        "type": "string",
+                                        "example": "Drone & Imaging"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Succesvol geüpdatet"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    }
+                },
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ]
             }
         },
         "/user/{user}/verlofaanvraag": {
@@ -221,12 +294,12 @@
                                     "startdatum": {
                                         "type": "string",
                                         "format": "date",
-                                        "example": "2025-07-01"
+                                        "example": "2026-07-01"
                                     },
                                     "einddatum": {
                                         "type": "string",
                                         "format": "date",
-                                        "example": "2025-07-10"
+                                        "example": "2026-07-10"
                                     },
                                     "status": {
                                         "type": "string",
